--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,5 @@ dependencies = [
     "tqdm",
     "setuptools",
     "importlib-metadata",
-    "typing-extesions>=4.0,<5.0",
+    "typing-extensions>=4.0,<5.0",
 ]
