--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,12 @@ classifiers = [
 
 #"typing_extesions",
 dependencies = [
-    "appdirs",
-    "numpy",
-    "google-cloud-storage",
+    "appdirs>=1.4.0",
+    "numpy<2.0dev0",
+    "google-cloud-storage>=2.10.0",
     "boto3",
     "tqdm",
     "setuptools",
     "importlib-metadata",
-    "typing-extensions>=4.0,<5.0",
+    "typing-extensions",
 ]
