revise comments in yaml
Co-authored-by: ovesh <ovesh1@gmail.com>

--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -3,7 +3,7 @@ run-name: build-wheels
 
 on:
   push:
-    # only build+push docker on release-please tags
+    # only build+publish wheels on release-please tags
     tags: [ "v*" ]
     paths:
     - ".github/actions/**"
