--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -10,7 +10,7 @@ dependencies:
   - typing-extensions
   - zlib
   - importlib-metadata
-  - google-cloud-storage>=2.10.0
+  - google-cloud-storage
   - boto3
 
   # dev + test dependencies
