--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -24,9 +24,9 @@ jobs:
         uses: actions/checkout@v4
 
         # the docker image in the workflow is necessary to build a manylinux compliant wheel.
-        # PyPI expects these to be run in manylinux_2_28 or lower. see https://peps.python.org/pep-0600/
-        # additionally, manylinux_2_28 is actively maintained by PyPA and includes /opt/python/ environments
-        # for 3.9-3.12 out-of-the-box. see https://quay.io/repository/pypa/manylinux_2_28_x86_64
+        # PyPI expects manylinux compliance in their distributions.
+        # additionally, manylinux_2_28 is designed to be "future-proof" as per PEP 600.
+        # see https://github.com/pypa/manylinux
       - name: Pre-pull manylinux image
         run: docker pull quay.io/pypa/manylinux_2_28_x86_64
 
