--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -49,7 +49,7 @@ jobs:
             # install build dependencies
             # numpy is required at build time because its c api is used
             for PYTHON in \${PYTHONS[@]}; do
-              \$PYTHON -m pip install -U pip setuptools wheel cmake auditwheel \"numpy>=1.25,<2.0.0.dev0\"
+              \$PYTHON -m pip install -U pip setuptools wheel cmake auditwheel \"numpy==2\"
 
               # Clean previous build artifacts
               rm -rf build dist *.egg-info
