update paths in workflow

--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -5,6 +5,7 @@ on:
   push:
     tags: [ "v*" ]
     paths:
+      - ".github/actions/**"
       - ".github/workflows/**"
       - "conda-recipe/**"
       - "genome_kit/**"
