--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -22,6 +22,7 @@ dependencies:
   - sphinx_rtd_theme
   - cmake
   - twobitreader>=3.1.0
+  - setuptools<80
 
     # mac/linux only dependencies
   - bcftools
