--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -22,7 +22,7 @@ dependencies:
   - sphinx_rtd_theme
   - cmake
   - twobitreader>=3.1.0
-  - setuptools<80
+  - setuptools<80 # Pinned to allow for `pip install -e .` See #167 for details.
 
     # mac/linux only dependencies
   - bcftools
